<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="back_button_content_description">back</string>
    <string name="cancel_button">Cancel</string>
    <string name="dialog_button_got_it">GOT IT</string>
    <string name="dialog_button_open_help_center">OPEN HELP CENTER</string>
    <string name="dialog_message_incompatible_phone">A Daydream-ready phone is required. Visit the Daydream Help Center for more information.</string>
    <string name="dialog_message_no_cardboard">Get the Cardboard app in order to configure your viewer.</string>
    <string name="dialog_message_setup">Set up your viewer for the best experience.</string>
    <string name="dialog_title">Configure</string>
    <string name="dialog_title_incompatible_phone">Incompatible phone</string>
    <string name="dialog_title_vr_core_not_enabled">Setup required</string>
    <string name="dialog_title_vr_core_not_installed">Install required</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_vr_core_not_enabled">This application may not work properly without enabling Google VR Services, please enable this in phone Settings before continuing.</string>
    <string name="dialog_vr_core_not_installed">This application may not work properly without Google VR Services. Please install Google VR Services from the Play Store before continuing.</string>
    <string name="go_to_playstore_button">Go to the Play Store</string>
    <string name="go_to_vr_listeners_settings_button">Go to Settings</string>
    <string name="no_browser_text">No browser to open website</string>
    <string name="place_your_phone_into_cardboard">Place your phone into your Cardboard viewer</string>
    <string name="place_your_viewer_into_viewer_format">Place your phone into your %s viewer</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_button_content_description">settings</string>
    <string name="setup_button">Setup</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="switch_viewer_action">Switch</string>
    <string name="switch_viewer_prompt">Using a different viewer?</string>
    <string name="Worn">Worn</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="account_delete_confirm_title">Delete account?</string>
    <string name="active_group_checkbox_title">Active group</string>
    <string name="add">Add</string>
    <string name="add_new_account">Add account</string>
    <string name="add_new_grid">Add grid</string>
    <string name="add_new_role">Add new role</string>
    <string name="add_role_member">Add member</string>
    <string name="add_role_member_confirm">Add member to the role?</string>
    <string name="add_to_mute_list">Add to mute list</string>
    <string name="age_days">%d days old</string>
    <string name="app_descr">Second Life viewer</string>
    <string name="app_name">Lumiya</string>
    <string name="app_upgrade_for_voice_needed">Lumiya needs to be updated to work with Voice Plugin.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrow_down">⇩</string>
    <string name="arrow_down_dashed">⇣</string>
    <string name="arrow_left">⇦</string>
    <string name="arrow_right">⇨</string>
    <string name="arrow_up">⇧</string>
    <string name="arrow_up_dashed">⇡</string>
    <string name="asset_action_edit">Edit</string>
    <string name="asset_action_rez">Rez</string>
    <string name="asset_action_teleport">Teleport</string>
    <string name="asset_action_view">View</string>
    <string name="asset_creator">Creator</string>
    <string name="asset_everyone">Everyone</string>
    <string name="asset_group">Group</string>
    <string name="asset_info_description">Description</string>
    <string name="asset_info_name">Asset name</string>
    <string name="asset_info_owner">Owner information</string>
    <string name="asset_info_permissions">Permissions</string>
    <string name="asset_info_type">Asset type</string>
    <string name="asset_last_owner">Last owner</string>
    <string name="asset_next_owner">Next owner</string>
    <string name="asset_no_description">(No description)</string>
    <string name="asset_owner">Owner</string>
    <string name="asset_owner_name_loading">(loading)</string>
    <string name="asset_owner_name_none">None</string>
    <string name="asset_permission_copy">Copy</string>
    <string name="asset_permission_modify">Modify</string>
    <string name="asset_permission_transfer">Transfer</string>
    <string name="asset_type_animation">Animation</string>
    <string name="asset_type_attachment">Attachment</string>
    <string name="asset_type_bodypart">Body part</string>
    <string name="asset_type_calling_card">Calling card</string>
    <string name="asset_type_clothing">Clothing</string>
    <string name="asset_type_folder">Folder</string>
    <string name="asset_type_gesture">Gesture</string>
    <string name="asset_type_landmark">Landmark</string>
    <string name="asset_type_link">Link</string>
    <string name="asset_type_lost_and_found">Lost and found</string>
    <string name="asset_type_lsl">LSL Script</string>
    <string name="asset_type_lsl_bytecode">LSL Script (bytecode)</string>
    <string name="asset_type_notecard">Notecard</string>
    <string name="asset_type_object">Object</string>
    <string name="asset_type_root_folder">Root folder</string>
    <string name="asset_type_script">Script</string>
    <string name="asset_type_sim_state">Simulator state</string>
    <string name="asset_type_snapshot">Snapshot</string>
    <string name="asset_type_sound">Sound</string>
    <string name="asset_type_texture">Texture</string>
    <string name="asset_type_texture_tga">Texture (TGA)</string>
    <string name="asset_type_trash">Trash</string>
    <string name="asset_type_unknown">Unknown</string>
    <string name="asset_type_wearable">Wearable</string>
    <string name="attachment_action_copy">Copy to inventory</string>
    <string name="attachment_action_teleport">Teleport to landmark</string>
    <string name="attachment_action_title">Attachment</string>
    <string name="attachment_saved_toast">Object saved to inventory</string>
    <string name="block_action_description">Block all messages</string>
    <string name="block_confirm_message">Block %s?</string>
    <string name="block_list_fragment_title">Block list</string>
    <string name="block_object_confirm_message">Block object %s?</string>
    <string name="block_permanently_no">No</string>
    <string name="block_permanently_temp">For this session only</string>
    <string name="block_permanently_yes">Yes</string>
    <string name="button_hud">HUD</string>
    <string name="cancel">Cancel</string>
    <string name="description_camera_mode">Camera mode</string>
    <string name="description_chat">Chat</string>
    <string name="description_fly_down">Fly down</string>
    <string name="description_fly_up">Fly up</string>
    <string name="description_hud">HUD</string>
    <string name="description_more">More</string>
    <string name="description_move_backward">Move back</string>
    <string name="description_move_forward">Move forward</string>
    <string name="description_move_left">Move left</string>
    <string name="description_move_right">Move right</string>
    <string name="description_pay">Pay or purchase object</string>
    <string name="description_sit">Sit on</string>
    <string name="description_stand_up">Stand up</string>
    <string name="description_stop_flying">Stop flying</string>
    <string name="description_touch">Touch</string>
    <string name="description_walk_mdoe">Walking mode</string>
    <string name="disclaimer">"This software is not provided or supported by Linden Lab, the makers of Second Life. This viewer has limited functionality. For full Second Life experience, please use the official Second Life viewer on a supported platform.

Second Life® is a registered trademark or Linden Research, Inc."</string>
    <string name="login_caption">Sign in</string>
    <string name="login_grid">Grid:</string>
    <string name="login_password">Password:</string>
    <string name="login_save_password">Save password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_user_name">User name:</string>
    <string name="menu_item_create_landmark">Create landmark</string>
    <string name="menu_item_inventory_new_folder">New folder</string>
    <string name="menu_item_inventory_new_notecard">New notecard</string>
    <string name="menu_item_inventory_sort">Sort</string>
    <string name="string_menu_item_add_friend">Add friend</string>
    <string name="string_menu_item_chat_history">Chat history…</string>
    <string name="string_menu_item_clear_chat_history">Clear history</string>
    <string name="string_menu_item_close_chat">Close</string>
    <string name="string_menu_item_export_chat_history">Export history</string>
    <string name="string_menu_item_group_invite">Invite</string>
    <string name="string_menu_item_mute">Mute</string>
    <string name="string_menu_item_new_group_notice">New notice</string>
    <string name="string_menu_item_offer_teleport">Offer teleport</string>
    <string name="string_menu_item_pay">Pay</string>
    <string name="string_menu_item_profile">Profile</string>
    <string name="string_menu_item_remove_friend">Remove friend</string>
    <string name="string_menu_item_request_teleport">Request teleport</string>
    <string name="string_menu_item_share_item">Share item</string>
    <string name="string_menu_item_teleport_to">Teleport to…</string>
    <string name="string_menu_item_touch">Touch</string>
    <string name="string_menu_item_unmute">Unmute</string>
</resources>