<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="?MenuIconClose" android:id="@id/item_close" android:title="@string/string_menu_item_close_chat" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconCard" android:id="@id/item_profile" android:title="@string/string_menu_item_profile" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconItemShare" android:id="@id/item_share_object" android:title="@string/string_menu_item_share_item" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconDollar" android:id="@id/item_pay_user" android:title="@string/string_menu_item_pay" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconFlag" android:id="@id/item_offer_teleport" android:title="@string/string_menu_item_offer_teleport" android:titleCondensed="Lure" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconRequestTeleport" android:id="@id/item_request_teleport" android:title="@string/string_menu_item_request_teleport" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconArrowTopRight" android:id="@id/item_teleport_to" android:title="@string/string_menu_item_teleport_to" android:titleCondensed="Teleport" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconTouch" android:id="@id/item_user_touch" android:title="@string/string_menu_item_touch" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconPlus" android:id="@id/item_add_friend" android:title="@string/string_menu_item_add_friend" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconMinus" android:id="@id/item_remove_friend" android:title="@string/string_menu_item_remove_friend" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconNewNotecard" android:id="@id/item_group_notice" android:title="@string/string_menu_item_new_group_notice" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconPlus" android:id="@id/item_group_invite" android:title="@string/string_menu_item_group_invite" app:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconMute" android:id="@id/item_mute" android:title="@string/string_menu_item_mute" />
    <item android:icon="?MenuIconUnmute" android:id="@id/item_unmute" android:title="@string/string_menu_item_unmute" />
    <item android:icon="?MenuIconBook" android:id="@id/item_chat_history" android:title="@string/string_menu_item_chat_history">
        <menu>
            <item android:icon="?MenuIconClose" android:id="@id/item_chat_history_clear" android:title="@string/string_menu_item_clear_chat_history" />
            <item android:icon="?MenuIconItemShare" android:id="@id/item_chat_history_export" android:title="@string/string_menu_item_export_chat_history" />
        </menu>
    </item>
</menu>
