<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:lumiya="http://schemas.android.com/apk/res-auto">
    <item android:icon="?MenuIconSort" android:id="@id/item_sort_order" android:title="@string/menu_item_inventory_sort" lumiya:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconNewFolder" android:id="@id/item_new_folder" android:title="@string/menu_item_inventory_new_folder" lumiya:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconNewNotecard" android:id="@id/item_new_notecard" android:title="@string/menu_item_inventory_new_notecard" lumiya:showAsAction="ifRoom|withText" />
    <item android:icon="?MenuIconPinMap" android:id="@id/item_create_landmark" android:title="@string/menu_item_create_landmark" lumiya:showAsAction="ifRoom|withText" />
</menu>
