<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_root" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@+id/accountUserNameLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_user_name" android:labelFor="@+id/loginNameText" />
    <EditText android:id="@id/loginNameText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textAutoCorrect" android:hint="@string/login_user_name" />
    <TextView android:id="@+id/accountPasswordLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_password" android:labelFor="@+id/loginPasswordText" />
    <EditText android:id="@id/loginPasswordText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textPassword" android:hint="@string/login_password" />
    <TextView android:id="@+id/accountGridLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_grid" android:labelFor="@+id/spinnerGrid" />
    <Spinner android:id="@id/spinnerGrid" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:layout_gravity="right" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@id/okButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_new_account" style="@style/BorderlessCardButton" />
        <Button android:id="@id/cancelButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/BorderlessCardButton" />
    </LinearLayout>
</LinearLayout>
