<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/login_root_view" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_gravity="right" android:id="@id/whatsnewText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_weight="1.0" />
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_caption" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_user_name" />
            <EditText android:id="@id/editUserName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:autoText="false" android:inputType="none" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_password" />
            <EditText android:id="@id/editPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:singleLine="true" android:capitalize="none" android:autoText="false" android:inputType="textPassword" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_grid" />
            <Spinner android:id="@id/spinnerGrid" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <CheckBox android:layout_gravity="center_vertical" android:id="@id/savePassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_save_password" android:layout_weight="1.0" />
                <Button android:layout_gravity="center" android:id="@id/buttonLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_sign_in" />
            </LinearLayout>
        </LinearLayout>
        <androidx.legacy.widget.Space android:id="@id/login_spacer" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="100.0" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="10.0sp" android:layout_gravity="center_horizontal" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0sp" android:text="@string/disclaimer" android:layout_weight="0.0" />
    </LinearLayout>
    <include layout="@layout/login_progress_layout" />
</FrameLayout>
