<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/world_view_holder" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <com.lumiyaviewer.lumiya.ui.render.InsetColoringLayout android:id="@id/insets_background" android:layout_width="fill_parent" android:layout_height="fill_parent" app:backgroundColor="?colorPrimaryDark">
        <LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.appcompat.widget.Toolbar android:theme="@style/ThemeOverlay.Lumiya.ActionBar" android:id="@id/toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize" app:popupTheme="@style/ThemeOverlay.Lumiya.PopupMenu" />
            <com.lumiyaviewer.lumiya.ui.common.SafeDrawerLayout android:id="@id/drawer_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <View android:id="@id/world_view_touch_receiver" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    <AbsoluteLayout android:id="@id/drag_pointer_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <ImageView android:id="@id/drag_pointer_view" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_material_center_focus" />
                    </AbsoluteLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@id/world_view_overlays" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <FrameLayout android:id="@id/details" android:background="?TranslucentBackground" android:visibility="gone" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" />
                        <FrameLayout android:id="@id/world_overlays_container" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="2.0">
                            <LinearLayout android:orientation="vertical" android:id="@id/world_overlays_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
                                <com.lumiyaviewer.lumiya.ui.voice.VoiceStatusView android:id="@id/voice_status_view_3d" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="0.0dip" />
                                <LinearLayout android:layout_gravity="top" android:orientation="horizontal" android:id="@id/object_controls_panel" android:padding="5.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                    <ImageButton android:id="@id/object_chat_button" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_chat" android:scaleType="fitCenter" android:layout_weight="0.0" android:contentDescription="@string/description_chat" />
                                    <ImageButton android:id="@id/object_touch_button" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_touch" android:scaleType="fitCenter" android:layout_weight="0.0" android:contentDescription="@string/description_touch" />
                                    <ImageButton android:id="@id/object_sit_button" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_sit" android:scaleType="fitCenter" android:layout_weight="0.0" android:contentDescription="@string/description_sit" />
                                    <ImageButton android:id="@id/object_stand_button" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_stand" android:scaleType="fitCenter" android:layout_weight="0.0" android:contentDescription="@string/description_stand_up" />
                                    <ImageButton android:id="@id/object_pay_button" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_money" android:scaleType="fitCenter" android:layout_weight="0.0" android:contentDescription="@string/description_pay" />
                                    <ImageButton android:id="@id/object_more_button" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_info" android:scaleType="fitCenter" android:layout_weight="0.0" android:contentDescription="@string/description_more" />
                                    <ImageView android:layout_gravity="center_vertical" android:id="@id/avatarIconView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:src="@drawable/icon_material_person" android:scaleType="fitCenter" />
                                    <TextView android:textColor="@color/text_primary_light" android:layout_gravity="center_vertical" android:id="@id/objectNameTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:singleLine="true" android:layout_weight="1.0" style="@style/TextAppearance.AppCompat.Medium" />
                                </LinearLayout>
                                <LinearLayout android:layout_gravity="right|top" android:orientation="vertical" android:id="@id/fly_buttons_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
                                    <ImageButton android:id="@id/button_fly_upward" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_arrow_up" android:scaleType="fitCenter" android:contentDescription="@string/description_fly_up" />
                                    <ImageButton android:id="@id/button_fly_downward" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_arrow_down" android:scaleType="fitCenter" android:contentDescription="@string/description_fly_down" />
                                    <ImageButton android:id="@id/button_stop_flying" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_arrow_ground" android:scaleType="fitCenter" android:contentDescription="@string/description_stop_flying" />
                                </LinearLayout>
                                <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/chats_overlay_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
                                <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/bottom_button_controls_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                    <ImageButton android:layout_gravity="bottom" android:id="@id/button_cam_on" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_videocam" android:scaleType="fitCenter" android:contentDescription="@string/description_camera_mode" />
                                    <ImageButton android:layout_gravity="bottom" android:id="@id/button_cam_off" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_videocam_off" android:scaleType="fitCenter" android:contentDescription="@string/description_walk_mdoe" />
                                    <Button android:textSize="12.0dip" android:layout_gravity="bottom" android:id="@id/button_hud" android:background="?buttonShapeMoveControl" android:padding="10.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:text="@string/button_hud" android:contentDescription="@string/description_hud" style="@style/Widget.AppCompat.Button.Borderless" />
                                    <androidx.legacy.widget.Space android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0" />
                                    <LinearLayout android:layout_gravity="right|bottom" android:orientation="vertical" android:id="@id/move_buttons_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
                                        <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                                            <TableRow>
                                                <View android:layout_width="0.0px" android:layout_height="0.0px" />
                                                <ImageButton android:id="@id/button_move_forward" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_key_up" android:scaleType="fitCenter" android:contentDescription="@string/description_move_forward" />
                                                <View android:layout_width="0.0px" android:layout_height="0.0px" />
                                            </TableRow>
                                            <TableRow>
                                                <ImageButton android:id="@id/button_turn_left" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_key_left" android:scaleType="fitCenter" android:contentDescription="@string/description_move_left" />
                                                <ImageButton android:id="@id/button_move_backward" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_key_down" android:scaleType="fitCenter" android:contentDescription="@string/description_move_backward" />
                                                <ImageButton android:id="@id/button_turn_right" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_key_right" android:scaleType="fitCenter" android:contentDescription="@string/description_move_right" />
                                            </TableRow>
                                        </TableLayout>
                                    </LinearLayout>
                                    <ImageButton android:layout_gravity="right|bottom" android:id="@id/button_stand_up" android:background="?buttonShapeMoveControl" android:padding="14.0dip" android:visibility="gone" android:layout_width="@dimen/fab_button_diameter" android:layout_height="@dimen/fab_button_diameter" android:src="@drawable/icon_material_eject" android:scaleType="fitCenter" android:contentDescription="@string/description_stand_up" />
                                </LinearLayout>
                                <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" layout="@layout/offline_notify" />
                            </LinearLayout>
                        </FrameLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <View android:id="@id/object_popup_left_spacer" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
                        <FrameLayout android:id="@id/object_popups_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0" />
                    </LinearLayout>
                </FrameLayout>
                <ListView android:layout_gravity="start" android:id="@id/left_drawer" android:background="?navDrawerBackgroundColor" android:layout_width="240.0dip" android:layout_height="fill_parent" android:divider="@android:color/transparent" android:dividerHeight="0.0dip" android:choiceMode="singleChoice" />
            </com.lumiyaviewer.lumiya.ui.common.SafeDrawerLayout>
        </LinearLayout>
    </com.lumiyaviewer.lumiya.ui.render.InsetColoringLayout>
</FrameLayout>
